# SimpleRayTracer

./: .gitignore  CMakeLists.txt
src/: RayTracing.cpp  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  raytracing.h  sphere.h  vec3.h
